# pyborg-1up

./: .dockerignore  .gitignore  .mypy.ini  .pylintrc  .python-version  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Dockerfile  Dockerfile.py3  Pipfile  README  README.md  docker-compose.yml  fabfile.py  pyproject.toml  requirements.txt  tasks.py  tox.ini
.github/workflows/: pythonapp.yml
dbexpr/: Dockerfile  db_tester.py  docker-compose.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  changes.rst  command.rst  conf.py  deploy.rst  enduser.rst  index.rst  module_dev.rst
misc/: expand.sh  pyborg-telnet.py  pyborg_config_slurp.py
misc/old_experimental_scripts/: pyborg-tribune.sh
misc/systemd_explorer/: Dockerfile  systemd_install.sh
pyborg/: ChangeLog  MANIFEST.in  README.md  example.discord.toml  example.irc.toml  example.mastodon.toml  example.pyborg.toml  example.reddit.toml  example.tumblr.toml  experimental_cmd.py  irc_commands.py  pyborg-bigfilein.py  pyborg-filein.py  pyborg-irc.py  pyborg-irc2.py  pyborg-linein.py  pyborg-reddit.py  pyborg.mastodon.toml  pyborg.reddit.toml  pyborg_discord.py  pyborg_entrypoint.py  pyborg_experimental.py  pyborg_http.py  pyborg_irc2.py  pyborg_reddit.py  pyborg_tumblr.py  setup.py  telegram.example.toml  test_discord.py  test_irc2.py  test_reddit.py  test_tumblr.py
pyborg-1.1.2/: cfgfile.py  pyborg-bigfilein.py  pyborg-filein.py  pyborg-irc.py  pyborg-linein.py  pyborg-reddit.py  pyborg-telnet.py  pyborg.py  setup.py
pyborg-1.1.2/experimental/: pyborg-cc.py  reddit-backup.py
pyborg-1.1.2/msnp/: __init__.py  codec.py  command.py  friend.py  session.py
pyborg-1.1.2/pyborg/: cfgfile.py  pyborg.py
pyborg/experimental/: pyborg-msnp.py
pyborg/fixtures/: discord.toml
pyborg/msnp/: chat.py  error.py  net.py  protocol.py
pyborg/pyborg/: __init__.py  cfgfile.py  commands.py  ircbot.py  irclib.py  pyborg.py
pyborg/pyborg/mod/: base.py  mod_discord.py  mod_filein.py  mod_http.py  mod_irc.py  mod_keybase.py  mod_linein.py  mod_mastodon.py  mod_reddit.py  mod_subtitle.py  mod_telegram.py  mod_tumblr.py  mod_twitter.py
pyborg/pyborg/util/: awoo.py  bottle_plugin.py  censored_defaults.py  commands.py  config_defaults.py  elenco_cognomi.txt  elenco_nomi.txt  graphing.py  hate_filter.py  irc.py  keybase_chat.py  lobster.py  stats.py  util_cli.py  utils_testing.py  voicesynth.py
pyborg/test/: test_awoo.py  test_discord.py  test_http.py  test_http_integration.py  test_irc2.py  test_mastodon.py  test_pyborg.py  test_reddit.py  test_tumblr.py  test_twitter.py  test_upgrade.py  test_voice.py
pyborg/test/fixtures/: blank.brain.pyborg.json  discord.toml  pyborg.mastodon.toml  pyborg.toml  small.brain.pyborg.json  toots.json  tumblr_posts.json
twistedbot/: twistedirc.py
