[tool.poetry]
name = "pyborg"
version = "2.0.0-alpha.7"
description = "Markov chain (chat) bot for a suite for modern services (discord, irc, twitter, mastodon, file, linein)"
license = "GPL-3.0+"
readme = "pyborg/README.md"
repository = "https://github.com/jrabbit/pyborg-1up"
documentation = "https://pyborg.readthedocs.io/en/latest/"
authors = ["Jack Laxson <jackjrabbit@gmail.com>"]
include = ["example.*.toml"]
packages = [
    { include = "pyborg", from = "pyborg" },
    { include = "pyborg_entrypoint.py", from = "pyborg" },

]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Topic :: Games/Entertainment",
]
[tool.poetry.scripts]
pyborg = 'pyborg_entrypoint:cli_base'

[tool.poetry.dependencies]
python = "^3.6.1"
toml = "^0.10.0"
arrow = "^0.15"
PyTumblr = "^0.1.0"
requests = "*"
bottle = "^0.12.17"
venusian = "^3"
click = "^7.0"
humanize = "^0.5.1"
praw = "^6.3"
"Mastodon.py" = "^1.4"
tweepy = "^3.7"
lxml = "^4.3"
attrs = "^19.1"
statsd = "^3.3"
prompt_toolkit = "^3"
"discord.py" = "^1.2.3"
"aeidon" = {version= "^1.7.0", optional = true}
irc = "^18"
aiohttp = "*"
tox = "^3.13.2"
nltk = {version = "^3.4.5", optional = true}
tabulate = "^0.8.5"
filelock = "^3.0"
importlib_metadata = {version = "^1.3.0", python = "< 3.8"}
networkx = "^2.4"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
green = "*"
coverage = "*"
sphinx-click = "*"
click = "^7.0"
sphinx-autobuild = "*"
mypy = {version = "*", python = ">= 3.7"}
flake8 = "^3.7"
invoke = "^1.2"
fabric2 = "^2.4"
asynctest = "^0.13.0"
ipython = "^7.6"
docutils = "^0.15"
pylint = "^2.3.1"
bandit = "^1.6.2"
black = "^19.10b0"

[tool.poetry.extras]
nlp = ["nltk"]
subtitles = ["aeidon"]

[tool.isort]
known_third_party = ["aeidon"]
line_length = 140

[tool.black]
line-length = 140
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

