[tool.poetry]
name = "pyborg"
version = "2.1.0a1"
description = "Markov chain (chat) bot for a suite for modern services (discord, irc, twitter, mastodon, file, linein)"
license = "GPL-3.0+"
readme = "pyborg/README.md"
repository = "https://github.com/jrabbit/pyborg-1up"
documentation = "https://pyborg.readthedocs.io/en/latest/"
authors = ["Jack Laxson <jackjrabbit@gmail.com>"]
include = ["example.*.toml"]
packages = [
    { include = "pyborg", from = "pyborg" },
    { include = "pyborg_entrypoint.py", from = "pyborg" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Topic :: Games/Entertainment",
]
[tool.poetry.scripts]
pyborg = 'pyborg_entrypoint:cli_base'

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
arrow = "^0.17"
PyTumblr = "^0.1.0"
requests = "*"
bottle = "^0.12.17"
venusian = "^3"
click = "^7.0"
humanize = "^3.0"
praw = "^6.3"
"Mastodon.py" = "^1.4"
tweepy = "^3.7"
attrs = "^21"
statsd = "^3.3"
prompt_toolkit = "^3"
"discord.py" = "^1.2.3"
"aeidon" = {version= "^1.7.0", optional = true}
irc = "^19"
aiohttp = "*"
tox = "^3.13.2"
nltk = {version = "^3.4.5", optional = true}
tabulate = "^0.8.5"
filelock = "^3.0"
importlib_metadata = {version = "^1.3.0", python = "< 3.8"}
importlib_resources = {version = "*", python = "< 3.9"}
networkx = {version = "^2.4", optional = true}
matplotlib = {version = "^3.1.2", optional = true}
typing_extensions = "^3.7.4"
defusedxml = "^0.7.0"
systemd = {version = "^0.16.1", optional = true}
pysocks = "^1.7.1"
pydot = {version = "^1.4.1", optional = true}
pygraphviz = {version = "^1.7", optional = true}

[tool.poetry.dev-dependencies]
green = "*"
coverage = "*"
sphinx-click = "*"
click = "^7.0"
sphinx-autobuild = "*"
mypy = {version = "*", python = ">= 3.7"}
flake8 = "^3.7"
invoke = "^1.2"
fabric2 = "^2.4"
asynctest = "^0.13.0"
ipython = [{version = "^7", python = ">= 3.7"}, {version = "^7.16", python = "<= 3.6"}]
docutils = "*"
pylint = "^2.3.1"
bandit = "*"
sphinxcontrib_github_alt = "^1.2"
webtest = "*"

[tool.poetry.dev-dependencies.black]
version = "*"
allow-prereleases = true

[tool.poetry.extras]
nlp = ["nltk"]
subtitles = ["aeidon"]
systemd = ["systemd"]
graphing = ["matplotlib", "networkx", "pydot", "pygraphviz"]

[tool.isort]
known_third_party = ["aeidon"]
line_length = 140

[tool.black]
line-length = 140

[tool.pyright]
ignore = ["*/misc/*", "**/test/*"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
